Clean-up dead config files

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,5 +5,6 @@
   "diagnostic.warningSign": "⚠",
   "tsserver.npm": "~/n/bin/npm",
   "tsserver.trace.server": "verbose",
-  "python.jediEnabled": false
+  "python.jediEnabled": false,
+  "python.linting.flake8Enabled": true
 }
